--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Great Idea - Responsive I</title>
-
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
 
@@ -12,5 +12,88 @@
 
 <body>
 <!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
+
+<div class="container">
+
+  <nav>
+    <div class="links">
+    <a href="services.html">Services</a>
+    <a href="#">Product</a>
+    <a href="#">Vision</a>
+    <a href="#">Features</a>
+    <a href="#">About</a>
+    <a href="#">Contact</a>
+    </div>
+    <div class="logo"><img  src="img/logo.png" alt="Great Idea! Company logo."></div>
+    
+  </nav>
+
+
+  <header class="home">
+    <div class="left">
+      <h1>Innovation<br />
+        On<br />
+        Demand
+      </h1>
+
+      <button class="mainCta">Get Started</button>
+    </div>
+    <div class="right">
+      <img src="img/header-img.png" alt="Image of a code snippet.">
+    </div>
+  </header>
+
+
+  <div class="first">
+    <div>
+      <h2>Features</h2>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+        Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+      </p>
+    </div>
+
+    <div>
+      <h2>About</h2>
+      <p>
+        Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+        Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+      </p>
+    </div>
+  </div>
+  <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+  <div class="second">
+    <div>
+      <h2>Services</h2>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+        Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+      </p>
+    </div>
+    <div>
+      <h2>Product</h2>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+        Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+      </p>
+    </div>
+    <div>
+      <h2>Vision</h2>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+        Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+      </p>
+    </div>
+  </div>
+  <div class="third">
+
+    <h2>Contact</h2>
+    <p>123 Way 456 Street<br />
+    Somewhere, USA<br />
+    <span>1 (888) 888-8888</span><br />
+    sales@greatidea.io</p>
+  </div>
+
+<footer><p>Copyright Great Idea! 2018</p></footer>
+  
+</div>
+
+
 </body>
 </html>
